@@ -1,5 +1,6 @@
 Version 1.6.7
 - BUG: The status cache could segfault in some situations. (Stefan)
+- BUG: Memory leak in SubWCRevCOM. (Stefan)
 
 Version 1.6.6
 - CHG: Reduced disk access in the status cache. (Stefan)
